--- a/index.html
+++ b/index.html
@@ -268,9 +268,7 @@
         <h2>16. CONTACT US</h2>
         <p>If you have any questions, concerns, or requests regarding this Privacy Policy or our privacy practices, please contact us at:</p>
         <ul>
-            <li>Email: [Your Contact Email]</li>
-            <li>Address: [Your Business Address]</li>
-            <li>Phone: [Your Contact Phone]</li>
+            <li>Email: afthabhussain33@gmail.com</li>
         </ul>
         <p>For European users, if you have concerns about our processing of your personal data that we are not able to resolve, you have the right to lodge a complaint with the data privacy authority where you reside.</p>
     </div>
